Fix php7.0 and yii2.x
fix php7.0 and yii2.x

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mero/yii2-monolog",
+  "name": "smilefish1987/yii2-monolog",
   "description": "The Monolog integration for the Yii framework.",
   "keywords": [
     "yii2",
